[dependencies]
chrono = "0.4.38"
lexical-sort = "0.3.1"
strum_macros = "0.26.4"
winnow = "0.6.20"
color-eyre = "0.6.3"
serde = {version = "1.0.213", features = ["derive"]}
tracing = "0.1.40"
pretty_assertions = "1.4.1"
strum = {version = "0.26.3", features = ["derive"]}

[dev-dependencies]
insta = {version = "1.40.0", features = ["yaml"]}

[package]
name = "vault-tasks-core"
description = "Vault Tasks Core"
categories = ["parsing"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/louis-thevenet/vault-tasks-core"
authors = ["Louis Thevenet <louis.tvnt@gmail.com>"]
license = "MIT"
